# Proof-of-Assets

./: README.md
src/: CMakeLists.txt  FF_gadget.cpp  POA.hpp  POA_bn.cpp  POA_final.cpp  POA_final_bn.cpp  Pedersen_commitment.cpp  Proof_of_Assets.cpp  Proof_of_Assets.hpp  Student.java  a.out  ecc.hpp  ecc_gadget.hpp  ecgadget.hpp  equality_gadget.hpp  file.cpp  findcurve.py  inputfile.csv  libsnark_headers.hpp  out.txt  packing_gadget.cpp  pedersen.cpp  pedersen.hpp  pedersen_bn.cpp  pedersen_final.cpp  privatekeys.csv  rand.cpp  rand_gen.hpp  random.cpp  read_csv.py  results.eps  results.py  ripemd160.cpp  scalarmul.cpp  scalarmul.hpp  scalarmul_bn.cpp  scalarmul_final.cpp  scalarmul_gadget.hpp  scalarmul_threads.cpp  test_PGHR13.cpp  (+16 more)
src/MultiThreading/: MatMul_Threads.cpp  MultiThread_print.cpp  a.out  thread1.cpp  without_thread.cpp
